--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://www.lawinc.com/stage/","creator":"http://perfmonkey.com","rand":0.11517615476623178,"created_at":"2014-07-26T09:27:38.382Z"}
